# backtrader-quik

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  tests.yml
Examples/: energy_safe.py  list_accounts.py  simple_strategy.py
backtrader_quik/: QKBroker.py  QKData.py  QKStore.py  QuikPy.py  __init__.py  logger_config.py
backtrader_quik/QUIK/: __init__.py
backtrader_quik/QUIK/lua/: __init__.py  qsfunctions.lua  qsutils.lua
backtrader_quik/QUIK/socket/: __init__.py
docs/: INSTALL_QUIK.md  MIGRATION.md  QUIK_JUNIOR_TEST_RESULTS_2026-07-17.md  TESTING.md  VALIDATION.md
tests/: test_regressions.py
